--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul>
                 <li>Home</li>
-                <li>Product</li>
+                <li href="product.html">Product</li>
                 <li>About</li>
                 <li>Contact</li>
                 <li>Add to Cart</li>
