--- a/Product cards/.vscode/product.html
+++ b/Product cards/.vscode/product.html
@@ -89,7 +89,7 @@
         </div>
         <div class="content">
             <img src="madame.png" alt="redminote13pro">
-            <h3>Women A-line Purple Dress</h3>
+            <h3>MADAME A-line Purple Dress</h3>
             <h6>Rs.2,399</h6>
             <ul>
                 <li><i class="fa fa-star checked"></i></li>
