--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -7,76 +7,36 @@
     <title>SmartCart</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <!-- shery.js cdnn for CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 </head>
 
 <body>
-<<<<<<< HEAD
-    <div class="child">
-        <nav>
-            <div>
-                <img id="logo" src="logo.png" alt="logo">
-            </div>
-            <div>
-                <img id="bar" src="dropdown.png" alt="menu bar">
-            </div>
-            <ul>
-                <li>Home</li>
-                <li href="product.html">Product</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Add to Cart</li>
-            </ul>
-            <div class="search-container">
-                <form action="/">
-                    <input type="text" placeholder="Search.." name="search">
-                    <button type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-search" viewBox="0 0 16 16">
-                            <path
-                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                        </svg>
-                    </button>
-                </form>
-            </div>
-            <div class="account-options">
-                <a href="login.html">Login</a>
-                <a href="login.html">Register</a>
-            </div>
-        </nav>
-        <div id="hero">
-            <div id="leftportion">
-                <span id="title">e-commerce Website</span>
-                <span id="text">Support local everything</span>
-                <div id="choose-card">
-                    <span>Choose Your</span>
-                    <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#2a4e45" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
-                        </svg>
-                        <span>2</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#2a4e45" class="bi bi-chevron-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
-                        </svg>
-                    </div>
-=======
     <div class="main">
         <div class="child">
             <nav>
-                <div>
-                    <img id="logo" src="logo.png" alt="logo">
+                <!-- <div>
+                    <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
                 </div>
-                <div>
-                    <img id="bar" src="dropdown.png" alt="menu bar">
-                </div>
+
                 <ul>
-                    <li>Home</li>
-                    <li>Product</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Add to Cart</li>
+                    <a href="#" class="nlink"></a>
+                    <li>Home</li></a>
+                    <a href="#" class="nlink"></a>
+                    <li>Product</li></a>
+                    <a href="#" class="nlink"></a>
+                    <li>About</li></a>
+                    <a href="#" class="nlink"></a>
+                    <li>Contact</li></a>
+                    <a href="#" class="nlink"></a>
+                    <li>Add to Cart</li></a>
                 </ul>
                 <div class="search-container">
-                    <form action="/">
+
+                    <form action="/" class="nlink">
                         <input type="text" placeholder="Search.." name="search">
                         <button type="submit">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -86,11 +46,70 @@
                             </svg>
                         </button>
                     </form>
+
                 </div>
                 <div class="account-options">
-                    <a href="./Login-Form/index.html">Login</a>
-                    <a href="./Sign-Up-From/index.html">Register</a>
+                    <a href="./Login-Form/index.html" class="nlink">Login</a>
+                    <a href="./Sign-Up-From/index.html" class="nlink">Register</a>
                 </div>
+                <div>
+                    <a href="#" class="nlink"> <img id="bar" src="dropdown.png" alt="menu bar"></a>
+                </div> -->
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                        <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">About</a>
+
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Add to Cart</a>
+
+                                </li>
+
+
+
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                        User
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./Login-Form/index.html">LogIn</a></li>
+                                        <li><a class="dropdown-item" href="./Sign-Up-From/index.html">SignUP</a></li>
+
+                                    </ul>
+                                </li>
+
+                            </ul>
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
             </nav>
             <div id="hero">
                 <div id="leftportion">
@@ -126,7 +145,6 @@
                     <figure>
                         <img src="banner.jpg" alt="">
                     </figure>
->>>>>>> 9916f763e88cd88e9288367b511f7677d7617171
                 </div>
             </div>
             <!-- <div class="bottom">
@@ -139,9 +157,32 @@
                     <path
                         d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
                 </svg> -->
+
         </div>
     </div>
     </div>
+
+
+    <!--  Gsap is needed for Basic Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <!-- Scroll Trigger is needed for Scroll Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <!-- Three.js is needed for 3d Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+
+    <!-- ControlKit is needed for Debug Panel -->
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+
+    <!-- Shery.js CDN link -->
+    <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
