Update code formatting

--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartCart</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="prod_style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <!-- shery.js cdnn for CSS -->
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
@@ -15,10 +16,10 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="child">
-            <nav>
-                <!-- <div>
+
+    <div class="child">
+        <nav>
+            <!-- <div>
                     <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
                 </div>
 
@@ -55,67 +56,67 @@
                 <div>
                     <a href="#" class="nlink"> <img id="bar" src="dropdown.png" alt="menu bar"></a>
                 </div> -->
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container-fluid">
-                        <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Product</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">About</a>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#jjk">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">About</a>
 
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Contact</a>
 
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Contact</a>
 
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Add to Cart</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Add to Cart</a>
 
-                                </li>
+                            </li>
 
 
 
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        User
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./Login-Form/index.html">LogIn</a></li>
-                                        <li><a class="dropdown-item" href="./Sign-Up-From/index.html">SignUP</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    User
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="./Login-Form/index.html">LogIn</a></li>
+                                    <li><a class="dropdown-item" href="./Sign-Up-From/index.html">SignUP</a></li>
 
-                                    </ul>
-                                </li>
+                                </ul>
+                            </li>
 
-                            </ul>
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
-                        </div>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
                     </div>
-                </nav>
+                </div>
             </nav>
-            <div id="hero">
-                <div id="leftportion">
-                    <span id="title">e-commerce Website</span>
-                    <span id="text">Support local everything</span>
-                    <!-- <div id="choose-card">
+        </nav>
+        <div id="hero">
+            <div id="leftportion">
+                <span id="title">e-commerce Website</span>
+                <span id="text">Support local everything</span>
+                <!-- <div id="choose-card">
                         <span>Choose Your</span>
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#2a4e45"
@@ -130,24 +131,24 @@
                                     d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z" />
                             </svg>
                         </div> -->
-                    <!-- </div> -->
-                    <button>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#F7EDE2"
-                            class="bi bi-cart3" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
-                                stroke="#F7EDE2" stroke-width="1" />
-                        </svg>
-                        Buy Now
-                    </button>
-                </div>
-                <div id="rightportion">
-                    <figure>
-                        <img src="banner.jpg" alt="">
-                    </figure>
-                </div>
+                <!-- </div> -->
+                <button>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#F7EDE2" class="bi bi-cart3"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
+                            stroke="#F7EDE2" stroke-width="1" />
+                    </svg>
+                    <a href="#jjk"> Buy Now</a>
+                </button>
             </div>
-            <!-- <div class="bottom">
+            <div id="rightportion">
+                <figure>
+                    <img class="img" src="banner.jpg" alt="">
+                </figure>
+            </div>
+        </div>
+        <!-- <div class="bottom">
                 <a>Follow us on</a>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path
@@ -158,9 +159,117 @@
                         d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z" />
                 </svg> -->
 
+    </div>
+    <div class="products" id="jjk">
+        <div class="gallery">
+            <div class="content">
+                <img src="galaxys21.png" alt="galaxys21">
+                <h3>Samsung Galaxy S21 5G with snapdragon 888</h3>
+                <h6>Rs.29,999</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="redminote13pro.png" alt="redminote13pro">
+                <h3>Redmi note 13 Pro 5G</h3>
+                <h6>Rs.25,999</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="iphone15.png" alt="redminote13pro">
+                <h3>Apple Iphone 15</h3>
+                <h6>Rs.72,999</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="dell.png" alt="redminote13pro">
+                <h3>DELL Intel Core i5 12gen 1235U</h3>
+                <h6>Rs.44,990</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="hpvictus.png" alt="redminote13pro">
+                <h3>HP Victus AMD Ryzen 5 Hexa core 5600H</h3>
+                <h6>Rs.60,990</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="adidas.png" alt="redminote13pro">
+                <h3>Adidas Fleecewalk Walking Shoes</h3>
+                <h6>Rs.1,568</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="madame.png" alt="redminote13pro">
+                <h3>MADAME A-line Purple Dress</h3>
+                <h6>Rs.2,399</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
+            <div class="content">
+                <img src="gucci.png" alt="redminote13pro">
+                <h3>Luxify scent Gucci flora Perfume</h3>
+                <h6>Rs.1,499</h6>
+                <ul>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                    <li><i class="fa fa-star checked"></i></li>
+                </ul>
+                <button class="buy">Buy Now</button>
+            </div>
         </div>
     </div>
     </div>
+
 
 
     <!--  Gsap is needed for Basic Effects -->
