--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -114,8 +114,8 @@
         </nav>
         <div id="hero">
             <div id="leftportion">
-                <span id="title">e-commerce Website</span>
-                <span id="text">Support local everything</span>
+                <span id="title">Smart- Cart...where dreams become reality</span>
+                <span id="text">Let's be vocal for Local</span>
                 <!-- <div id="choose-card">
                         <span>Choose Your</span>
                         <div>
