--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -164,7 +164,7 @@
         <div class="gallery">
             <div class="content">
                 <img src="galaxys21.png" alt="galaxys21">
-                <h3>Samsung Galaxy S21 5G with snapdragon 888</h3>
+                <h3>Samsung Galaxy S21 5G</h3>
                 <h6>Rs.29,999</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
