--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -216,7 +216,7 @@
             </div>
             <div class="content">
                 <img src="hpvictus.png" alt="redminote13pro">
-                <h3>HP Victus AMD Ryzen 5 Hexa core 5600H</h3>
+                <h3>HP Victus AMD Ryzen 5 5600H</h3>
                 <h6>Rs.60,990</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
@@ -229,7 +229,7 @@
             </div>
             <div class="content">
                 <img src="adidas.png" alt="redminote13pro">
-                <h3>Adidas Fleecewalk Walking Shoes</h3>
+                <h3>Adidas Fleecewalk Shoes</h3>
                 <h6>Rs.1,568</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
@@ -255,7 +255,7 @@
             </div>
             <div class="content">
                 <img src="gucci.png" alt="redminote13pro">
-                <h3>Luxify scent Gucci flora Perfume</h3>
+                <h3>Luxify Gucci flora Perfume</h3>
                 <h6>Rs.1,499</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
