added contact page and add some animations

--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="prod_style.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <!-- shery.js cdnn for CSS -->
+    <!-- shery.js cdn for CSS -->
 
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <!-- Bootscrap cdnn for CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootscrap cdn for CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -60,7 +62,7 @@
                 <div>
                     <a href="#" class="nlink"> <img id="bar" src="dropdown.png" alt="menu bar"></a>
                 </div> -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-black">
                 <div class="container-fluid">
                     <a href="#" class="nlink"> <img id="logo" src="logo.png" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -81,7 +83,8 @@
 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                                <a class="nav-link active" aria-current="page"
+                                    href="./Contact-Page/index.html">Contact</a>
 
                             </li>
 
