--- a/Smart-Cart/Contact-Page/index.html
+++ b/Smart-Cart/Contact-Page/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h2>Get in touch</h2>
-        <p>Feel free to contact me about anything related to Web Development.</p>
+        <p>Feel free to reach out us about anything we can do!</p>
         <form class="contact-form" action="#" method="post" onsubmit="redirectToOtherPage(); return false;">
             <div class="input-area">
                 <input type="text" placeholder="Your name" />
