Delete about.css and about.html files and add them in the main file and subscribe to our newsletter make

--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -79,7 +79,7 @@
                                 <a class="nav-link active" aria-current="page" href="#jjk">Product</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">About</a>
+                                <a class="nav-link active" aria-current="page" href="./About-Page/index.html">About</a>
 
                             </li>
                             <li class="nav-item">
