Update form inputs with required attribute and fix script.js

--- a/Smart-Cart/Login-Form/index.html
+++ b/Smart-Cart/Login-Form/index.html
@@ -37,11 +37,11 @@
 
             <form class="login-form" action="#" method="post" onsubmit="redirectToOtherPage(); return false;">
                 <div class="form-control">
-                    <input type="text" placeholder=" Enter Your Username">
+                    <input type="text" placeholder=" Enter Your Username" required>
                     <i class="fas fa-user"></i>
                 </div>
                 <div class="form-control">
-                    <input type="password" placeholder="Enter Your Password">
+                    <input type="password" placeholder="Enter Your Password" required>
                     <i class="fas fa-lock"></i>
                 </div>
 
@@ -51,7 +51,7 @@
     </section>
 
     <!--  Gsap is needed for Basic Effects -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
     <!-- Scroll Trigger is needed for Scroll Effects -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
