--- a/Smart-Cart/Sign-Up-From/index.html
+++ b/Smart-Cart/Sign-Up-From/index.html
@@ -38,19 +38,19 @@
 
             <form class="login-form" action="#" method="post" onsubmit="redirectToOtherPage(); return false;">
                 <div class="form-control">
-                    <input type="text" placeholder="Enter Username">
+                    <input type="text" placeholder="Enter Username" required>
                     <i class="fas fa-user"></i>
                 </div>
                 <div class="form-control">
-                    <input type="email" placeholder="Enter Your Email">
+                    <input type="email" placeholder="Enter Your Email" required>
                     <i class="ri-mail-line"></i>
                 </div>
                 <div class="form-control">
-                    <input type="number" placeholder="Enter your phone number">
+                    <input type="number" placeholder="Enter your phone number" required>
                     <i class="ri-phone-line"></i>
                 </div>
                 <div class="form-control">
-                    <input type="password" placeholder="Password">
+                    <input type="password" placeholder="Password" required>
                     <i class="fas fa-lock"></i>
                 </div>
 
