--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -107,10 +107,10 @@
                             </li>
 
                         </ul>
-                        <form class="d-flex" role="search">
+                        <!-- <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </nav>
@@ -295,6 +295,7 @@
         crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
+    <script src="prod_script.js"></script>
 </body>
 
 </html>
