Commented out the products section in index.html

--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -163,7 +163,7 @@
                 </svg> -->
 
     </div>
-    <div class="products" id="jjk">
+    <!-- <div class="products" id="jjk">
         <div class="gallery">
             <div class="content">
                 <img src="galaxys21.png" alt="galaxys21">
@@ -271,7 +271,7 @@
             </div>
         </div>
     </div>
-    </div>
+    </div> -->
 
 
 
