--- a/Smart-Cart/index.html
+++ b/Smart-Cart/index.html
@@ -14,7 +14,7 @@
     <!-- Bootscrap cdnn for CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootscrap cdn for CSS -->
+    <!-- font-awesome cdn for CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -164,10 +164,10 @@
                 </svg> -->
 
     </div>
-    <!-- <div class="products" id="jjk">
+    <div class="products" id="jjk">
         <div class="gallery">
             <div class="content">
-                <img src="galaxys21.png" alt="galaxys21">
+                <img src="./images_for_products/galaxys21.png" alt="galaxys21">
                 <h3>Samsung Galaxy S21 5G</h3>
                 <h6>Rs.29,999</h6>
                 <ul>
@@ -180,8 +180,8 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="redminote13pro.png" alt="redminote13pro">
-                <h3>Redmi note 13 Pro 5G</h3>
+                <img src="./images_for_products/redminote13pro.png" alt="redminote13pro">
+                <h3>Redmi note 13 Pro 5G mobile</h3>
                 <h6>Rs.25,999</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
@@ -193,8 +193,8 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="iphone15.png" alt="redminote13pro">
-                <h3>Apple Iphone 15</h3>
+                <img src="./images_for_products/iphone15.png" alt="iphone15">
+                <h3>Apple Iphone 15 Mobile</h3>
                 <h6>Rs.72,999</h6>
                 <ul>
                     <li><i class="fa fa-star checked"></i></li>
@@ -206,7 +206,7 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="dell.png" alt="redminote13pro">
+                <img src="./images_for_products/dell.png" alt="Dell">
                 <h3>DELL Intel Core i5 12gen 1235U</h3>
                 <h6>Rs.44,990</h6>
                 <ul>
@@ -219,7 +219,7 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="hpvictus.png" alt="redminote13pro">
+                <img src="./images_for_products/hpvictus.png" alt="hpvictus">
                 <h3>HP Victus AMD Ryzen 5 5600H</h3>
                 <h6>Rs.60,990</h6>
                 <ul>
@@ -232,7 +232,7 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="adidas.png" alt="redminote13pro">
+                <img src="./images_for_products/adidas.png" alt="adidas">
                 <h3>Adidas Fleecewalk Shoes</h3>
                 <h6>Rs.1,568</h6>
                 <ul>
@@ -245,7 +245,7 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="madame.png" alt="redminote13pro">
+                <img src="./images_for_products/madame.png" alt="madame">
                 <h3>MADAME A-line Purple Dress</h3>
                 <h6>Rs.2,399</h6>
                 <ul>
@@ -258,7 +258,7 @@
                 <button class="buy">Buy Now</button>
             </div>
             <div class="content">
-                <img src="gucci.png" alt="redminote13pro">
+                <img src="./images_for_products/gucci.png" alt="gucci">
                 <h3>Luxify Gucci flora Perfume</h3>
                 <h6>Rs.1,499</h6>
                 <ul>
@@ -270,9 +270,12 @@
                 </ul>
                 <button class="buy">Buy Now</button>
             </div>
+            <button id="btn">See More Products</button>
         </div>
+        <a href="./Product-Page/index.html"><button type="button" id="out_btn"
+                class="btn btn-warning rounded-circle">Load-More-Products</button></a>
     </div>
-    </div> -->
+    </div>
 
 
 
@@ -297,6 +300,7 @@
 
     <script src="script.js"></script>
     <script src="prod_script.js"></script>
+
 </body>
 
 </html>
